Fix overflow interface public sur ordinateur lors d'un drag

--- a/src/_webapp/ressources/css/public.css
+++ b/src/_webapp/ressources/css/public.css
@@ -178,10 +178,12 @@ div.bootstrap-switch-large{
 
 /* experimental, à vérifier */
 
-
 .playlist-main, .panel, .playlistContainer, .list-group, .list-group > li.list-group-item, .list-group .contentDiv {
     border-radius: 0;
     touch-action: pan-y !important;
+}
+.playlistContainer {
+    overflow-x: hidden;
 }
 
 .drag  {
